<resources>
    <string name="app_name">Real estate manager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="property_kind">Choose the property kind</string>
    <string name="price">Price*</string>
    <string name="surface">Surface*</string>
    <string name="surface_measurement">in m2 (Required)</string>
    <string name="number_of_rooms">Number of rooms*</string>
    <string name="address">Address*</string>
    <string name="property_description">Property description</string>
    <string name="choose_the_points_of_interest">Choose the points of interest</string>
    <string name="school">School</string>
    <string name="parc">Park</string>
    <string name="transport">Transport</string>
    <string name="shop">Shop</string>
    <string name="house">House</string>
    <string name="ground">Ground</string>
    <string name="apartment">Apartment</string>
    <string name="parking">Parking</string>
    <string name="other">Other</string>
    <string name="what_agent">What agent ?*</string>
    <string name="add_photo">Add photo</string>
    <string name="photo_1">Photo 1</string>
    <string name="photo_2">Photo 2</string>
    <string name="photo_3">Photo 3</string>
    <string name="photo_4">Photo 4</string>
    <string name="postal_code">Postal Code*</string>
    <string name="city">City*</string>
    <string name="add_property">Add property</string>
    <string name="add_photo_from">Add photo from ?</string>
    <string name="from_gallery">From gallery</string>
    <string name="take_picture">Take picture</string>
    <string name="photo_description">Photo description</string>
    <string name="validate_photo">Validate photo</string>
    <string name="required">*Required</string>
    <string name="empty_fields">One or more fields are empty. Please fill them.</string>
    <string name="media">Media</string>
    <string name="property_kind_textview">Kind</string>
    <string name="surface_detail">Surface</string>
    <string name="rooms">Rooms</string>
    <string name="location">Location</string>
    <string name="agent">Agent</string>
    <string name="selled">Selled</string>
    <string name="no">No</string>
    <string name="title_edit">What do you want edit?</string>
    <string name="edit_price">Price</string>
    <string name="m2">in m2</string>
    <string name="edit_address">Address</string>
    <string name="edit_surface">Surface</string>
    <string name="edit_postal_code">Postal code</string>
    <string name="edit_city">City</string>
    <string name="save_modifications">Save modifications</string>
    <string name="photo_5">Photo 5</string>
    <string name="photo_6">Photo 6</string>
    <string name="what_to_do">What to do?</string>
    <string name="remove">Remove</string>
    <string name="add_modify">Add/modify</string>
    <string name="property_sold">Property sold</string>
    <string name="edit_number_of_rooms">Number of rooms</string>
    <string name="sold_status">SOLD</string>
    <string name="adding_of_property">Adding of property</string>
    <string name="add_property_went_well">Adding of property went well</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is channel 1</string>

    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="what_kind">What kind?</string>
    <string name="what_price_range">What price range?</string>
    <string name="what_price">What price?</string>
    <string name="price_min">Price min</string>
    <string name="price_max">Price max</string>
    <string name="what_surface">What surface ?</string>
    <string name="surface_min">Surface min</string>
    <string name="surface_max">Surface max</string>
    <string name="what_city">What city ?</string>
    <string name="what_points_of_interest">What points of interest ?</string>
    <string name="how_many_photos">How many photos minimum ?</string>
    <string name="looking_for">What do you looking for ?</string>
    <string name="reset">Reset</string>
    <string name="how_much_is_your_financial_contribution">How much is your financial contribution ?</string>
    <string name="enter_the_amount_here">Enter the amount here</string>
    <string name="what_rate">What annual interest rate?</string>
    <string name="enter_the_interet_rate_here">Enter the interest rate here</string>
    <string name="loan_over_how_many_months">Loan over how many year ?</string>
    <string name="monthly_amount">Monthly amount</string>
    <string name="total_amount">Total amount</string>
    <string name="quit">Quit</string>
    <string name="calcul">Calcul</string>
    <string name="loan_simulator">Loan simulator</string>

    <string-array name="Estate_agents">
        <item>Mickael Bordier</item>
        <item>Helene Cluchet</item>
        <item>Vanessa Basset</item>
        <item>Alexandre Sase</item>
    </string-array>

    <string-array name="Kind">
        <item>House</item>
        <item>Ground</item>
        <item>Apartment</item>
        <item>Parking</item>
        <item>Other</item>
    </string-array>

    <string-array name="Photo_number">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>



</resources>
