<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_loan_contribution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_10_dp"
        android:layout_marginEnd="@dimen/margin_10_dp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/how_much_is_your_financial_contribution">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_loan_contribution_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_loan_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialog_loan_contribution"
        app:layout_constraintEnd_toEndOf="@id/dialog_loan_contribution"
        app:layout_constraintTop_toBottomOf="@id/dialog_loan_contribution"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="@dimen/margin_10_dp"
        android:hint="@string/what_rate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_loan_rate_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_loan_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialog_loan_contribution"
        app:layout_constraintEnd_toEndOf="@id/dialog_loan_contribution"
        app:layout_constraintTop_toBottomOf="@id/dialog_loan_rate"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="@dimen/margin_10_dp"
        android:hint="@string/loan_over_how_many_months">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_loan_duration_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dialog_loan_monthly_amount_response"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialog_loan_contribution"
        app:layout_constraintTop_toBottomOf="@id/dialog_loan_duration"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:textSize="20sp"
        android:textColor="@color/overlay_light_primary"
        android:gravity="center"/>

    <TextView
        android:id="@+id/dialog_loan_total_amount_response"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/dialog_loan_monthly_amount_response"
        app:layout_constraintEnd_toEndOf="@id/dialog_loan_contribution"
        app:layout_constraintBottom_toBottomOf="@id/dialog_loan_monthly_amount_response"
        android:textSize="20sp"
        android:textColor="@color/overlay_light_primary"
        android:gravity="center"/>

    <TextView
        android:id="@+id/dialog_loan_monthly_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialog_loan_monthly_amount_response"
        app:layout_constraintEnd_toEndOf="@id/dialog_loan_monthly_amount_response"
        app:layout_constraintTop_toBottomOf="@id/dialog_loan_monthly_amount_response"
        android:text="@string/monthly_amount"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dialog_loan_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/dialog_loan_monthly_amount"
        app:layout_constraintStart_toStartOf="@id/dialog_loan_total_amount_response"
        app:layout_constraintEnd_toEndOf="@id/dialog_loan_total_amount_response"
        android:text="@string/total_amount"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/dialog_loan_button_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialog_loan_monthly_amount_response"
        app:layout_constraintEnd_toEndOf="@id/dialog_loan_monthly_amount_response"
        app:layout_constraintTop_toBottomOf="@id/dialog_loan_monthly_amount"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:text="@string/quit"/>

    <Button
        android:id="@+id/dialog_loan_button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialog_loan_total_amount_response"
        app:layout_constraintEnd_toEndOf="@id/dialog_loan_total_amount_response"
        app:layout_constraintBottom_toBottomOf="@id/dialog_loan_button_quit"
        android:text="@string/calcul"/>


</androidx.constraintlayout.widget.ConstraintLayout>